@@ -3,6 +3,7 @@ Changes:
 2.12.0
 ----------------
 
+* cpp - fix potential FileSequence memory leak during copy; switch to unique_ptr private data member
 * cpp - use shared_ptr for internal map management instead of custom deleter
 * cpp - clang-tidy formatting
 
